--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   cursor: pointer;
   transition: color 0.3s;
   text-decoration: none;
+  box-shadow: 0 0 3rem black;
 }
 .button::before {
 content: '';
